FEAT player-type-of-song

--- a/index.html
+++ b/index.html
@@ -21,13 +21,47 @@
         <main class="main">
 
             <div class="container-upgrade">
-                
+
             </div>
 
         </main>
     </div>
 
     <footer class="footer">
+        <div class="container player">
+            <div class="row">
+                <div class="col">
+                    <div class="row player_type-of-song">
+                            <div class="type-of-song_img">
+                                <img src="img/sinister.jpeg" alt="">
+                            </div>
+                            <div class="type-of-song_text">
+                                <p>
+                                    Sinister
+                                </p>
+                                <p class="graytext">
+                                    Brano Nome
+                                </p>
+                            </div>
+                            <div class="type-of-song_icon">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-regular fa-folder"></i>
+                            </div>
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="player_impostation-song">
+                            ciao
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="player_style-song">
+                            ciao
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </footer>
     
