FEAT footer responsive complete (465px)

--- a/index.html
+++ b/index.html
@@ -15,21 +15,34 @@
 
     <div class="top-big-container">
         <header class="header">
+            <div class="row header_container">
+                <div class="col">
+                    <div class="top-side-bar">
+                        <div class="side_bar_logo">
+                            <img src="./img/logo.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="bottom-side-bar">
+                        ciao
+                    </div>
+                </div>
+            </div>
 
         </header>
 
         <main class="main">
 
             <div class="container-upgrade">
-
             </div>
 
         </main>
     </div>
 
     <footer class="footer">
-        <div class="container player">
-            <div class="row">
+        <div class="container">
+            <div class="row player">
                 <div class="col">
                     <div class="row player_type-of-song">
                             <div class="type-of-song_img">
@@ -50,14 +63,49 @@
 
                     </div>
                 </div>
-                <div class="col">
-                    <div class="player_impostation-song">
-                            ciao
+                <div class="col-6">
+                    <div class="row player_impostation-song">
+                            <div class="col-12">
+                                <div class="impostation-song_icon">
+                                    <i class="fa-solid fa-shuffle"></i>
+                                    <i class="fa-solid fa-backward-step"></i>
+                                    <i class="big fa-regular fa-circle-play"></i>
+                                    <i class="fa-solid fa-forward-step"></i>
+                                    <i class="fa-solid fa-rotate-right"></i>
+                                </div>
+                            </div>
+
+                            <div class="col-12">
+                                <div class="row impostation-song_time">
+                                     <p>
+                                        2:25
+                                     </p>
+                                     <div class="time-bar">
+                                        <div class="time_bar_on">
+                                        </div>
+                                     </div>
+                                     <p>
+                                        4:35
+                                     </p>
+                                </div>
+                            </div>
+
                     </div>
                 </div>
-                <div class="col">
-                    <div class="player_style-song">
-                            ciao
+                <div class="col player_style">
+                    <div class="row player_style-song">
+                            <div class="style-song_icon">
+                                <i class="fa-solid fa-bars"></i>
+                                <i class="fa-solid fa-desktop"></i>
+                            </div>
+
+                            <div class="row style-song_volume">
+                                <i class="fa-solid fa-volume-high"></i>
+                                <div class="volume-bar">
+                                    <div class="volume_bar_on">
+                                    </div>
+                                </div>
+                            </div>
                     </div>
                 </div>
             </div>
