FEAT logo header & header_nav

--- a/index.html
+++ b/index.html
@@ -21,6 +21,47 @@
                         <div class="side_bar_logo">
                             <img src="./img/logo.svg" alt="">
                         </div>
+                        <div class="header_nav">
+                            <ul class="row">
+                                <li>
+                                    <div class="row nav_home">
+                                        <div class="yellow-bar">
+                                        </div>
+                                        <div class="row nav_text">
+                                            <i class="fa-solid fa-house"></i>
+                                            <p>
+                                                Home
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="row nav_cerca">
+                                        <div class="yellow-bar">
+                                        </div>
+                                        <div class="row nav_text">
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                            <p>
+                                                Cerca
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="row nav_libreria">
+                                        <div class="yellow-bar">
+                                        </div>
+                                        <div class="row nav_text">
+                                            <i class="fa-solid fa-lines-leaning"></i>
+                                            <p>
+                                                La tua libreria
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
