FEAT header top-side-bar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         <div class="side_bar_logo">
                             <img src="./img/logo.svg" alt="">
                         </div>
+
                         <div class="header_nav">
                             <ul class="row">
                                 <li>
@@ -59,14 +60,103 @@
                                         </div>
                                     </div>
                                 </li>
-
                             </ul>
+                        </div>
+
+                        <div class="header_playlist">
+                            <div class="playlist">
+                                <h3>
+                                    PLAYLIST
+                                </h3>
+                                <ul class="row">
+                                    <li>
+                                        <div class="playlist_crea">
+                                            <div class="row">
+                                                <div class="plus-square">
+                                                    <i class="fa-solid fa-plus"></i>
+                                                </div>
+                                                <p class="graytext">
+                                                    Crea Playlist
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="playlist_nome">
+                                            <p class="graytext">
+                                                Nome Playlist
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="playlist_nome">
+                                            <p class="graytext">
+                                                Nome Playlist
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="playlist_nome">
+                                            <p class="graytext">
+                                                Nome Playlist
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="playlist_nome">
+                                            <p class="graytext">
+                                                Nome Playlist
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="playlist_nome">
+                                            <p class="graytext">
+                                                Nome Playlist
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="playlist_nome">
+                                            <p class="graytext">
+                                                Nome Playlist
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="playlist_nome">
+                                            <p class="graytext">
+                                                Nome Playlist
+                                            </p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="bottom-side-bar">
-                        ciao
+                        <div class="side_bar_download">
+                            <div class="row">
+                                <div class="arrow-circle">
+                                    <i class="fa-solid fa-arrow-down-long"></i>
+                                </div>
+                                <p class="graytext">
+                                    Installa ora
+                                </p>
+                            </div>
+                        </div>
+                        <div class="side_bar_user">
+                            <div class="row">
+                                <div class="arrow-circle">
+                                    <i class="fa-solid fa-arrow-down-long"></i>
+                                </div>
+                                <h3>
+                                    Jhon Don
+                                </h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
