--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <div class="top-side-bar">
                         <div class="side_bar_logo">
                             <img src="./img/logo.svg" alt="">
+                            <img class="small-logo" src="./img/logo-small.svg" alt="">
                         </div>
 
                         <div class="header_nav">
@@ -149,8 +150,8 @@
                         </div>
                         <div class="side_bar_user">
                             <div class="row">
-                                <div class="arrow-circle">
-                                    <i class="fa-solid fa-arrow-down-long"></i>
+                                <div class="user_circle">
+                                    <i class="fa-regular fa-user"></i>
                                 </div>
                                 <h3>
                                     Jhon Don
