FEAT header responsive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="col">
                     <div class="top-side-bar">
                         <div class="side_bar_logo">
-                            <img src="./img/logo.svg" alt="">
+                            <img class="none" src="./img/logo.svg" alt="">
                             <img class="small-logo" src="./img/logo-small.svg" alt="">
                         </div>
 
@@ -27,11 +27,11 @@
                             <ul class="row">
                                 <li>
                                     <div class="row nav_home">
-                                        <div class="yellow-bar">
+                                        <div class="none yellow-bar">
                                         </div>
                                         <div class="row nav_text">
                                             <i class="fa-solid fa-house"></i>
-                                            <p>
+                                            <p class="none">
                                                 Home
                                             </p>
                                         </div>
@@ -39,11 +39,11 @@
                                 </li>
                                 <li>
                                     <div class="row nav_cerca">
-                                        <div class="yellow-bar">
+                                        <div class="none yellow-bar">
                                         </div>
                                         <div class="row nav_text">
                                             <i class="fa-solid fa-magnifying-glass"></i>
-                                            <p>
+                                            <p class="none">
                                                 Cerca
                                             </p>
                                         </div>
@@ -51,11 +51,11 @@
                                 </li>
                                 <li>
                                     <div class="row nav_libreria">
-                                        <div class="yellow-bar">
+                                        <div class="none yellow-bar">
                                         </div>
                                         <div class="row nav_text">
                                             <i class="fa-solid fa-lines-leaning"></i>
-                                            <p>
+                                            <p class="none">
                                                 La tua libreria
                                             </p>
                                         </div>
@@ -64,7 +64,7 @@
                             </ul>
                         </div>
 
-                        <div class="header_playlist">
+                        <div class="header_playlist none">
                             <div class="playlist">
                                 <h3>
                                     PLAYLIST
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="bottom-side-bar">
+                    <div class="bottom-side-bar none">
                         <div class="side_bar_download">
                             <div class="row">
                                 <div class="arrow-circle">
