FEAT container upgrade

--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
         <main class="main">
 
             <div class="container-upgrade">
+                <div class="row upgrade">
+                    <a href="#">
+                        <button>
+                            EFFETTUA L'UPGRADE
+                        </button>
+                    </a>
+                </div>
             </div>
 
         </main>
