FEAT nav content section

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         <main class="main">
 
-            <div class="container-upgrade">
+            <section class="container-upgrade">
                 <div class="row upgrade">
                     <a href="#">
                         <button>
@@ -174,7 +174,83 @@
                         </button>
                     </a>
                 </div>
-            </div>
+            </section>
+
+            <section class="container-content">
+                <nav class="nav_content">
+                    <ul class="row">
+                        <li>
+                            <div class="row nav-bar">
+                                <a href="#">
+                                    <p class="graytext">
+                                        IN EVIDENZA
+                                    </p>
+                                </a>
+                                <div class="yellow-bar">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="row nav-bar">
+                                <a href="#">
+                                    <p class="graytext">
+                                        PODCAST
+                                    </p>
+                                </a>
+                                <div class="none yellow-bar">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="row nav-bar">
+                                <a href="#">
+                                    <p class="graytext">
+                                        CLASSIFICHE
+                                    </p>
+                                </a>
+                                <div class="none yellow-bar">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="row nav-bar">
+                                <a href="#">
+                                    <p class="graytext">
+                                        GENERI E MOOD
+                                    </p>
+                                </a>
+                                <div class="none yellow-bar">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="row nav-bar">
+                                <a href="#">
+                                    <p class="graytext">
+                                        NUOVE USCITE
+                                    </p>
+                                </a>
+                                <div class="none yellow-bar">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="row nav-bar">
+                                <a href="#">
+                                    <p class="graytext">
+                                        SCOPRI
+                                    </p>
+                                </a>
+                                <div class="none yellow-bar">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+
+                </nav>
+
+
+            </section>
 
         </main>
     </div>
