FEAT transition time-bar & volume-bar

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                                 <div class="impostation-song_icon">
                                     <i class="fa-solid fa-shuffle"></i>
                                     <i class="fa-solid fa-backward-step"></i>
-                                    <i class="big fa-regular fa-circle-play"></i>
+                                    <i class="start-play big fa-regular fa-circle-play"></i>
                                     <i class="fa-solid fa-forward-step"></i>
                                     <i class="fa-solid fa-rotate-right"></i>
                                 </div>
