FEAT :hover-icon in volume-bar

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                     <div class="arrow-circle">
                                         <i class="fa-solid fa-arrow-down-long"></i>
                                     </div>
-                                    <p class="graytext">
+                                    <p class="graytext none">
                                         Installa ora
                                     </p>
                                 </div>
@@ -191,7 +191,7 @@
                                 <div class="user_circle">
                                     <i class="fa-regular fa-user"></i>
                                 </div>
-                                <h3>
+                                <h3 class="none">
                                     Jhon Don
                                 </h3>
                             </div>
@@ -585,7 +585,10 @@
                             </div>
 
                             <div class="row style-song_volume">
-                                <i class="fa-solid fa-volume-high"></i>
+                                <div class="hover-icon">
+                                    <i class="fa-solid fa-volume-high"></i>
+                                    <i class="fa-solid fa-volume-xmark"></i>
+                                </div>
                                 <div class="volume-bar">
                                     <div class="volume_bar_on">
                                         <div class="cerchio">
