FEAT bottom-side-bar in media-query 630px

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
 
                 <div class="col">
-                    <div class="bottom-side-bar none">
+                    <div class="row bottom-side-bar">
                         <div class="side_bar_download">
                             <a href="#">
                                 <div class="row">
